# ESP32-FIRMWARE-OTA-UPDATE

./: readme.md
aws_services/lambda_functions/: esp32FirmwareUpdater.js  ota_update.py
aws_services/rds/: firmware_deployments_schema_query.sql
esp_firmware_project/esp32_project/: CMakeLists.txt
esp_firmware_project/esp32_project/src/: main.cpp
esp_firmware_projects/: readme.md
esp_firmware_projects/esp32_project/: partitions.csv  platformio.ini  targetDevices.json
esp_firmware_projects/esp32_project/components/OTAUpdateManager/: CMakeLists.txt
esp_firmware_projects/esp32_project/components/OTAUpdateManager/include/OTAUpdateManager/: OTAUpdateManager.h
esp_firmware_projects/esp32_project/components/OTAUpdateManager/src/: NVSStorageHandler.cpp  SignatureVerifier.cpp
esp_firmware_projects/main_app/: CMakeLists.txt  platformio.ini
esp_firmware_projects/main_app/components/OTAUpdateChecker/: CMakeLists.txt
esp_firmware_projects/main_app/components/OTAUpdateChecker/include/OTAUpdateChecker/: OTAUpdateChecker.h
esp_firmware_projects/main_app/components/OTAUpdateChecker/src/: OTAUpdateChecker.cpp
esp_firmware_projects/main_app/src/: main.cpp
esp_firmware_projects/ota_loader/: CMakeLists.txt  partitions.csv
esp_firmware_projects/ota_loader/src/: main.cpp
ota_deploy_package/: .env  cli.js  package-lock.json  package.json  readme.md
ota_deploy_package/certs/: rds-global-bundle.pem
ota_deploy_package/scripts/: buildPlatformIO.js  db.js  deploy.js  lambda.js  s3Uploader.js  signer.js  targetList.js
ota_deploy_package/services/: logger.js
(+18 files in other folders)
